--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       <div class="wrapper">
         <h2>About me</h2>
         <div class="photo">
-          <img src="img/author.png" width="130" height="150">
+          <img src="img/author.png" width="130" height="150" alt="Author">
           <p>Hey there! Thanks for stopping by to visit my page. Think I should introduce myself first. 
             My name’s Dzmitry, 23 years old, and recently I’ve made a conscious decision to pursue a 
             development career. Why, you ask? Well, it’s simple, really. After graduating I couldn’t really 
@@ -101,8 +101,8 @@
         </div>
         <div class="s-media">
           <img src="img/telegram.png" width="64" height="64" alt="Telegram">	<p>@Tellorium</p>
-          <img src="img/email.png" width="64" height="64" alt="Email">	<p>dimalitx@gmail.com</p>
-          <img src="img/phone.png" width="64" height="64"alt="Phone number"> <p>+375447298474</p> 	
+          <a href="mailto:dimalitx@gmail.com"><img src="img/email.png" width="64" height="64" alt="Email"></a><p>dimalitx@gmail.com</p>
+          <img src="img/phone.png" width="64" height="64" alt="Phone number"> <p>+375447298474</p> 	
           <img src="img/discord.png" width="64" height="64" alt="Discord"> <p>Veliar#0428</p>
         </div>
       </div>
